# project-06_HaDucHuyK24

./: .gitignore  README.md
project-06/: main.py  pyproject.toml  run_collections.py
project-06/src/project_06/: collect_product_ids.py  conn.py  export_mongo_data.py  load_to_bigquery.py  logging.py  process_ip_location.py  scrape_product_data.py  table_schema.py  utils.py
