[project]
name = "project-06"
version = "0.1.0"
description = ""
authors = [
    {name = "Hhd",email = "hdh997@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pymongo (>=4.17.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "project_06", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
