[project]
name = "project-06"
version = "0.1.0"
description = ""
authors = [
    {name = "Hhd",email = "hdh997@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "pymongo (>=4.17.0,<5.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "google-cloud-storage (>=3.12.0,<4.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "fastparquet (>=2026.5.0,<2027.0.0)",
    "google-cloud-bigquery (>=3.42.1,<4.0.0)",
    "functions-framework (>=3.10.2,<4.0.0)",
    "ip2location (>=8.11.0,<9.0.0)"
]

[tool.poetry]
packages = [{include = "project_06", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
